--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="com.tangem.presentation.activity.MainActivity">
 
     <LinearLayout
-        android:id="@+id/tvTapPrompt"
+        android:id="@+id/llTapPrompt"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/actionbar_text"
